+MainMenu Widget C++ & Blueprint, +MainMenu GameMode

--- a/GGJ/GGJ.uproject
+++ b/GGJ/GGJ.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{DFCC10DC-49F7-13F5-A58D-A294A8E52763}",
+	"EngineAssociation": "5.1",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -9,7 +9,8 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine"
+				"Engine",
+				"UMG"
 			]
 		}
 	],
