+ Some input stuff

--- a/GGJ/Config/DefaultEngine.ini
+++ b/GGJ/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@ GameDefaultMap=/Game/Maps/Level_testMenu.Level_testMenu
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 GlobalDefaultGameMode=/Game/Blueprints/BP_GGJGameMode.BP_GGJGameMode_C
 TransitionMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
+TwoPlayerSplitscreenLayout=Vertical
+bOffsetPlayerGamepadIds=True
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
