--- a/GGJ/Config/DefaultEngine.ini
+++ b/GGJ/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GlobalDefaultGameMode=/Game/Blueprints/BP_GGJGameMode.BP_GGJGameMode_C
 TransitionMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
 TwoPlayerSplitscreenLayout=Vertical
 bOffsetPlayerGamepadIds=True
+bUseSplitscreen=False
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
