--- a/GGJ/Config/DefaultEngine.ini
+++ b/GGJ/Config/DefaultEngine.ini
@@ -1,11 +1,17 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Level_testMenu.Level_testMenu
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode=/Game/Blueprints/BP_GGJGameMode.BP_GGJGameMode_C
+LocalMapOptions=
 TransitionMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
-TwoPlayerSplitscreenLayout=Vertical
-bOffsetPlayerGamepadIds=True
 bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Vertical
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=True
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/Level_testMenu.Level_testMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/BPGamemode_MainMenu.BPGamemode_MainMenu_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
